Event list alignment fix

--- a/public/css/toast.css
+++ b/public/css/toast.css
@@ -28,3 +28,17 @@
 .hide-column {
     display: none;
 }
+
+.custom-flexbox {
+    display:flex;
+}
+
+.custom-flexbox > div {
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.flex-content {
+    flex: 100%;
+}
